--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,7 +17,7 @@ main:
   - title: "Project Experience"
     url: /teaching/    
     
-  - title: "Honor And Award"
+  - title: "Honor And Awards"
     url: /markdown/
     
   # - title: "CV"
