--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "https://sipengshen01.github.io" #"SipengShen01/shens
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   name             : "Shen Sipeng"
   bio              : "Postgraduate Student"
   location         : "Wuhan, China"
